--- a/style2.css
+++ b/style2.css
@@ -22,7 +22,7 @@ h1{
     justify-content: center;
     flex-wrap: nowrap;
 }
-button{
+a{
     cursor: pointer;
     height: 20vh;
     width: 40%;
@@ -31,4 +31,12 @@ button{
     font-weight: bolder;
     color: blue;
 
+}
+a>button{
+    height: 20vh;
+    width: 100%;
+    border-radius: 40px;
+    font-size: 20px;
+    font-weight: bolder;
+    color: blue;
 }
